--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,12 +10,12 @@
 		<link rel="stylesheet" href="{%static 'css/blog.css'%}">
     </head>
     <body>
-        <div class='page=-header'>
-            <h1> <a href='/'> Django Girls Blog</a></h1>
+        <div class='page-header'>
+            <h1> <a href='/'> New Blog</a></h1>
         </div>
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     {% block content %}
                     {% endblock %}
                 </div>
