--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+ 	<div class="post-new">
+         <a href="{% url 'post_new' %}">Add A new post</a>
+     </div>
     {% for post in posts %}
 		<div class="post">
 		    <div class='date'>
