--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,5 +9,6 @@
         {% endif %}
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaks }}</p>
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %} ">Edit</a>      
     </div>
 {% endblock %}
