--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,6 +9,8 @@
         {% endif %}
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaks }}</p>
-        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %} ">Edit</a>      
+        {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %} ">Edit</a>
+        {% endif %}      
     </div>
 {% endblock %}
