--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,7 +2,9 @@
 
 {% block content %}
  	<div class="post-new">
+         {% if user.is_authenticated %}
          <a href="{% url 'post_new' %}">Add A new post</a>
+      	{% endif %}
      </div>
     {% for post in posts %}
 		<div class="post">
